// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderTopColor": "#edeff2",
      "borderTopWidth": 1,
      "paddingHorizontal": 15,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 15,
      }
    }
  >
    <ReadMore
      numberOfLines={5}
      renderRevealedFooter={[Function]}
      renderTruncatedFooter={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Hotel description
      </Text>
    </ReadMore>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderTopColor": "#edeff2",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingVertical": 15,
      }
    }
  />
</View>
`;

exports[`renders without crashing with missing data 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderTopColor": "#edeff2",
      "borderTopWidth": 1,
      "paddingHorizontal": 15,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 15,
      }
    }
  >
    <ReadMore
      numberOfLines={5}
      renderRevealedFooter={[Function]}
      renderTruncatedFooter={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
    </ReadMore>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "borderTopColor": "#edeff2",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingVertical": 15,
      }
    }
  />
</View>
`;
